# hw_10

./: .gitignore  README.md  pyproject.toml
homework/authors/migrations/: 0001_initial.py  0002_delete_author.py
homework/homework/: settings.py  urls.py
homework/quotes/: forms.py
homework/quotes/migrations/: 0001_initial.py  0002_author_tag_quote_created_at_alter_quote_quote_and_more.py  0003_alter_author_born_location.py  0004_alter_tag_name.py  0005_alter_author_born_date.py  0006_alter_author_born_date.py  0007_alter_quote_quote.py
homework/quotes/templates/quotes/: base.html
homework/utils/: add_quotes_to_db.py  migration.py
