[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["F1r3n25 <dimalikegtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pymongo = "^4.6.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
